add ServerSignature off

--- a/default.conf
+++ b/default.conf
@@ -1,4 +1,6 @@
 <VirtualHost *:80>
+    ServerSignature Off
+    ServerTokens Prod
 
     DocumentRoot /usr/local/apache2/html
     <Directory /usr/local/apache2/html>
