move ServerSignature to httpd.conf

--- a/httpd.conf
+++ b/httpd.conf
@@ -548,5 +548,8 @@ SSLRandomSeed startup builtin
 SSLRandomSeed connect builtin
 </IfModule>
 
+ServerSignature Off
+ServerTokens Prod
+
 # To Load Customer VirtualHost Configuration files
 IncludeOptional conf/sites/*.conf
